--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,15 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
-server.error.include-message=always
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
 
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
+logging.file.name=app.log
+
+server.error.include-message=always
 
