--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,9 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.SQL=TRACE
@@ -22,7 +23,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
-logging.file.name=app.log
+logging.file.name=bookstore-app.log
 
 server.error.include-message=always
 
